--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
