--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.6"
   },
