--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.1.5",
+    "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
