--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.4.7",
     "jszip": "^3.10.1",
     "postcss": "^8.5.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
