--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.8",
     "framer-motion": "^12.4.7",
     "jszip": "^3.10.1",
+    "multer": "^1.4.5-lts.2",
     "postcss": "^8.5.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
